Fix menu on mobile

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  width: 100%;
+  margin: 0 24px;
   padding: 24px 0;
   display: flex;
   flex-direction: column;
@@ -10,6 +10,7 @@
 
 @media (min-width: 896px) {
   .footer {
+    margin: 0 48px;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
